added padding-top to review paragraphs

--- a/Testimonials/testimonials.css
+++ b/Testimonials/testimonials.css
@@ -38,6 +38,9 @@ body {
 .card--profile > h5 {
   opacity: 50%;
 }
+.card--review > p {
+  padding-top: 20px;
+}
 .card--review > p > q {
   opacity: 70%;
 }
