--- a/Testimonials/testimonials.css
+++ b/Testimonials/testimonials.css
@@ -16,6 +16,8 @@ body {
   margin: 100px 50px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(1fr, 2fr);
+  align-items: flex-start;
   gap: 20px;
   color: #edf2f8;
 }
