--- a/Testimonials/testimonials.css
+++ b/Testimonials/testimonials.css
@@ -16,7 +16,6 @@ body {
   margin: 100px 50px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: minmax(1fr, 2fr);
   align-items: flex-start;
   gap: 20px;
   color: #edf2f8;
@@ -27,6 +26,18 @@ body {
   padding: 20px;
   border-radius: 5px;
 }
+.card:nth-of-type(1) {
+  grid-column: 1 / span 2;
+}
+.card:nth-of-type(5) {
+  grid-column: 2 / span 2;
+}
+.card:nth-of-type(3) {
+  grid-column: 4;
+  grid-row: 1 / span 2;
+}
+
+/* card components */
 .card--img {
   width: 30px;
   border-radius: 50%;
