--- a/style.css
+++ b/style.css
@@ -65,6 +65,11 @@ body {
 .card--review > p {
   padding-top: 20px;
 }
+.blockquote--review {
+  padding-top: 20px;
+  opacity: 70%;
+  line-height: 1.3;
+}
 blockquote p::before {
   content: "\201C";
 }
